<resources>
    <string name="app_name">Formativ</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_login">Formativ</string>
    <string name="prihlasit_button">Prihlásiť sa</string>
    <string name="meno_hint">Meno</string>
    <string name="heslo_hint">Heslo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_ucitel">MenuUcitelActivity</string>
    <string name="priezvisko">Priezvisko</string>
    <string name="zopakovat_heslo">Zopakovat heslo</string>
    <string name="typ">Typy Pouzivatela</string>
    <string name="registrovat">Registrovat</string>
    <string name="spustena">Spustena</string>
    <string name="nazov_serie">Nazov Serie</string>
    <string-array name="typy_pouzivatelov">
        <item>Admin</item>
        <item>Ucitel</item>
        <item>Student</item>
    </string-array>
    <string-array name="typy_otazok">
        <item>Otázka s možnosťami</item>
        <item>Otázka bez možností</item>
        <item>Otázka bez hodnotenia</item>
    </string-array>
    <string-array name="pouzivatelia">
        <item>vseno</item>
        <item>rziadne</item>
        <item>ttest</item>
    </string-array>
</resources>
