<LinearLayout
    android:id="@+id/LoginLayout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.upjs.vma.formativ.prihlasenie.LoginActivity">

    <TextView
        android:id="@+id/title_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/text_Meno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/meno_hint"
            android:maxLines="1"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/text_Heslo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/heslo_hint"
            android:maxLines="1"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/prihlasit_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prihlasit_button"
            android:textStyle="bold"/>


    </LinearLayout>
</LinearLayout>
